# video

./: .dockerignore  .env.backup  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  setup.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260212_001_initial_schema.py  20260213_002_add_media_processing_columns.py  20260213_003_make_dimensions_nullable.py  20260214_004_add_timeline_preview_settings.py  20260215_005_fix_rq_job_id_length.py  20260215_006_add_render_duration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai.py  audio.py  auth.py  deps.py  edit_request.py  media.py  projects.py  render.py  timeline.py
backend/app/core/: __init__.py  config.py  database.py  queue.py  rate_limit.py  redis.py  security.py  storage.py
backend/app/models/: __init__.py  audio.py  job.py  media.py  project.py  timeline.py  user.py
backend/app/rules/: __init__.py  rule_parser.py
backend/app/schemas/: __init__.py  audio.py  edit_plan.py  edit_request.py  media.py  project.py  render.py  timeline.py
backend/app/services/: __init__.py  ai_planner.py  edit_plan_converter.py  edit_request_converter.py  edit_request_validator.py
backend/tests/: __init__.py  conftest.py
backend/tests/contract/: __init__.py  conftest.py  determinism_test.py  edl_schema.json  roundtrip_test.py  test_schema_validation.py  validator.py
backend/tests/contract/test_vectors/: images_only.json  invalid_recoverable.json  invalid_reject.json  minimal.json  missing_optional_fields.json  normal.json  unknown_future_fields.json  videos_only.json
backend/tests/e2e/: __init__.py  test_complete_workflow.py
backend/tests/fixtures/: edit_request_mixed_with_video_trimming.json  edit_request_per_segment_overrides.json  edit_request_simple_loop.json
backend/tests/integration/: __init__.py  test_ai_endpoints.py  test_audio_upload.py  test_auth_flow.py  test_edit_request.py  test_full_workflow.py  test_media_upload.py  test_project_crud.py
backend/tests/unit/: test_edit_plan.py  test_edit_request_validator.py  test_rule_parser.py  test_storage.py  test_storage_permissions.py
caddy/: Caddyfile
docs/: ai_prompt_to_video.md  api.md  deployment.md  development.md  editplan_v1.md  feature1_validation.md  manual_test_ai_stitch.md  todo.txt  troubleshooting.md
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: backup.sh  deploy.sh  generate_test_media.py  render_from_orchestrator.py  smoke_render.py  validate_ai_contract.sh  validate_feature1.sh  video.py
worker/: Dockerfile  __init__.py  pyproject.toml
worker/app/: __init__.py  db.py  main.py  queues.py
worker/app/tasks/: __init__.py  beat_analysis.py  edit_request_converter.py  ffmpeg_runner.py  media.py  render.py  timeline.py
worker/app/tasks/motion_engine/: __init__.py  beat_sync.py  cache.py  ffmpeg_templates.py  presets.py  render_image_clip.py
worker/tests/: conftest.py
worker/tests/golden/: __init__.py  conftest.py  generate_golden_hash.py  test_render_deterministic.py
worker/tests/golden/edl/: simple_two_images.json
worker/tests/golden/expected/: simple_two_images.framemd5
worker/tests/integration/: README.md  __init__.py  test_render_real.py
worker/tests/unit/test_motion_engine/: __init__.py  test_beat_sync.py  test_cache_key.py  test_ffmpeg_templates.py  test_presets.py
worker/tests/utils/: __init__.py  ffprobe.py  media_env.py
(+59 files in other folders)
